--- a/MainApp/package.json
+++ b/MainApp/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-maps": "0.29.4",
     "react-native-pager-view": "^5.4.9",
     "react-native-paper": "^4.10.0",
     "react-native-push-notification": "^8.1.1",
