--- a/MainApp/package.json
+++ b/MainApp/package.json
@@ -19,6 +19,9 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.2",
+    "react-native-camera": "^4.2.1",
+    "react-native-camera-hooks": "^0.5.3",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "0.29.4",
     "react-native-pager-view": "^5.4.9",
