--- a/MainApp/android/app/build.gradle
+++ b/MainApp/android/app/build.gradle
@@ -198,6 +198,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation project(':react-native-community-checkbox')
 
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
 
