--- a/MainApp/android/settings.gradle
+++ b/MainApp/android/settings.gradle
@@ -7,3 +7,6 @@ project(':react-native-camera').projectDir = new File(rootProject.projectDir,   
 
 include ':react-native-fs'
 project(':react-native-fs').projectDir = new File(settingsDir, '../node_modules/react-native-fs/android')
+
+include ':react-native-community-checkbox'
+project(':react-native-community-checkbox').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/checkbox/android')
